Feb 20, 2014 - chris ---------------------------------------------------
o The log was merged with the journal; the journal now stores
	redo-information for physical changes. To improve performance, the journal
	buffers its data before flushing to disk.

Feb 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.5

Feb 06, 2014 - chris ---------------------------------------------------
o Bugfix: cache purges always purged one page only; now purges as many as
	required

Feb 05, 2014 - chris ---------------------------------------------------
o Fixed several regressions that crept in when 2.1.4 was released

Feb 04, 2014 - chris ---------------------------------------------------
o Bugfix: if a Database is closed in an in-memory Environment, the Database
	name was still occupied and the Database could not be re-created.

Jan 28, 2014 - chris ---------------------------------------------------
o The freelist was replaced and scales much better now
o Removed the parameter HAM_PARAM_MAX_DATABASES - the number of databases
	is now always set to the maximum limit.

Jan 08, 2014 - chris ---------------------------------------------------
o Removed HAM_CACHE_STRICT, HAM_CACHE_FULL and the related functionalities

Jan 05, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.4

Jan 01, 2014 - chris ---------------------------------------------------
o Default Btree node layout now also stores duplicate keys inline, even
	if they're > 8 bytes (previous versions stored duplicate keys in a
	separate blob, which required lots of additional I/O)

Nov 23, 2013 - chris ---------------------------------------------------
o Default Btree node layout for variable length keys can now store
	fixed length records inline if they're small enough (and if duplicate
	keys are disabled)

Nov 22, 2013 - chris ---------------------------------------------------